testData/imports/optimize/importDirectoryWithoutPackages.go
package main

import (
  <error descr="Unused import">"emptyDirectory"</error>
  "fmt"
)

func main() {
  fmt.Println("Halo");
}